--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
    
         <title>Eagle FM - Home</title>
-        <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="js/ajax/libs/font-awesome/5.14.0/css/all.min.css">
         <link rel="stylesheet" href="css/vendor/slick.css">
         <link rel="stylesheet" href="css/vendor/venobox.min.css">
         <link rel="stylesheet" href="css/vendor/bootstrap.min.css">
         <link rel="stylesheet" href="css/custom/main.css">
         <link rel="stylesheet" href="css/custom/index.css">
+
+        <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
+        <link rel="manifest" href="img/site.webmanifest">
     </head>
     <body>
         <div class="back2top-btn"><a href="#"><i class="fas fa-long-arrow-alt-up"></i></a></div>
