--- a/team.html
+++ b/team.html
@@ -52,7 +52,7 @@
                                     </ul>
                                 </li>
                             </ul>
-                            <div class="navbar-btn"><a class="btn btn-outline" href="sponsor.html"><i class="fas fa-hands-helping"></i><span>Become a Sponsor</span></a></div>
+                            <div class="navbar-btn"><a class="btn btn-outline" href="sponsor.html"><i class="fas fa-hands-helping"></i><span>Become a partner</span></a></div>
                         </div>
                     </div>
                 </div>
